# wodin-deploy

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
config/: epimodels.yml  test.yml  testNoSSL.yml
config/basic/: wodin.yml
config/epimodels/: wodin.yml
tests/: __init__.py  test_config.py  test_constellation.py
wodin_deploy/: __about__.py  config.py  wodin_constellation.py
